<resources>


    <!--      <string name=""></string>      -->


    <string name="app_name_maj">SOFT</string>
    <string name="login">login</string>
    <string name="log_in">log in</string>
    <string name="register">register</string>
    <string name="start_text">BETTER CONNECT</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="lost_password">Lost password</string>
    <string name="not_already_register">no account ? register now !</string>
    <string name="fullname">fullname</string>
    <string name="username">username</string>
    <string name="already_register_log_in_now">Already register ? Log in now !</string>
    <string name="reset_password">reset password</string>
    <string name="reset">reset</string>


</resources>