<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/font"
    tools:context=".userStart.LoginActivity">


    <LinearLayout
        android:id="@+id/linear_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/relative_close"
            android:layout_width="50dp"
            android:layout_marginTop="25dp"
            android:layout_height="50dp">

        <ImageView
            android:id="@+id/close"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:padding="6dp"
            android:src="@drawable/ic_close"
            tools:ignore="MissingConstraints" />

        </RelativeLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_semibold"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:layout_marginTop="25dp"
            android:textSize="40sp"

            />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/background_button_outline"
            android:ems="10"
            android:fontFamily="@font/comfortaa_light"
            android:hint="@string/e_mail"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:padding="15dp"
            android:textColorHint="@color/hint_text"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_button_outline"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:fontFamily="@font/comfortaa_light"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text"
            android:textCursorDrawable="@android:drawable/screen_background_light" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lost_password"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/comfortaa_medium"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/lost_password"
            android:textColor="#000000"
            android:textSize="13sp" />

        </RelativeLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@drawable/background_button_filled"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/login"
            android:textColor="@color/white" />






        <TextView
            android:id="@+id/to_register"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/comfortaa_medium"
            android:gravity="center"
            android:includeFontPadding="false"

            android:text="@string/not_already_register"

            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>