<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/font"
    tools:context=".userStart.StartActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"

            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/app_name_maj"
            android:textColor="@color/black"
            android:textSize="45sp"
            tools:ignore="MissingConstraints">

        </TextView>


        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/start_text"
            android:textColor="@color/black"
            android:textSize="13sp"
            tools:ignore="MissingConstraints">

        </TextView>


    </RelativeLayout>



    <LinearLayout
        android:id="@+id/texte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="55dp"
        android:orientation="horizontal">


        <ViewFlipper
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/reverse">


            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_button_outline"
                android:backgroundTint="@color/white"
                android:text="@string/login"
                android:textColor="@color/black"
                android:fontFamily="@font/comfortaa_semibold"
                android:textSize="13sp"
                android:textStyle="bold">

            </Button>


        </ViewFlipper>
        <ViewFlipper
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/skip">

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="8dp"
                android:text="@string/register"
                android:textColor="@color/white"
                android:fontFamily="@font/comfortaa_semibold"
                android:textSize="13dp"
                android:textStyle="bold"
                android:background="@drawable/background_button_filled">

            </Button>


        </ViewFlipper>




    </LinearLayout>





</RelativeLayout>