<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/font"
    android:orientation="vertical"
    tools:context=".userStart.ResetPasswordActivity">






<LinearLayout
        android:id="@+id/linear_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/relative_close"
            android:layout_width="50dp"
            android:layout_marginTop="25dp"
            android:layout_height="50dp">

        <ImageView
            android:id="@+id/close"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:padding="6dp"
            android:src="@drawable/ic_close"
            tools:ignore="MissingConstraints" />

        </RelativeLayout>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_semibold"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:textSize="35sp"

            />

        <EditText
            android:id="@+id/send_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/background_button_outline"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_text"
            android:textCursorDrawable="@android:drawable/screen_background_light" />


        <Button
            android:id="@+id/btn_reset"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/background_button_filled"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/reset"
            android:textColor="@color/white" />






        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:textColor="@color/grey"
            android:text="By clicking RESET, you will receive an email to reset your password."/>




        
        
        
    </LinearLayout>


</LinearLayout>